# gptty

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  auth_fetcher.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: auth.md  conversation_locks.md  observe.md  profiles.md  profiles_and_locks.md  release.md  required_actions.md  sdk_boundary.md
src/gptty/: __init__.py  auth_inspect.py  cli.py  io.py  locks.py  media.py  output.py  profiles.py  prompt.py  required_action.py  runs.py  sdk_client.py  state.py
src/gptty/commands/: ask.py  attach.py  auth.py  chat.py  export.py  messages.py  observe.py  profile.py  send.py  status.py
tests/: test_ask_command.py  test_attach_command.py  test_auth_command.py  test_auth_fetcher_format.py  test_auth_inspect.py  test_chat_command.py  test_cli.py  test_cli_auth.py  test_cli_images.py  test_conversation_lock_commands.py  test_export_command.py  test_io.py  test_locks.py  test_messages_command.py  test_observe_command.py  test_output.py  test_profile_cli.py  test_profiles.py  test_prompt.py  test_required_action.py  test_required_action_commands.py  test_run_event_commands.py  test_runs.py  test_sdk_client.py  test_send_command.py  test_state.py  test_status_command.py
